<resources>
    <string name="app_name">My Nami Application</string>
    <string name="text_view1">纳米学位应用</string>
    <string name="button2">热门电影</string>
    <string name="button3">股票雄鹰</string>
    <string name="button4">XYZ阅读器</string>
    <string name="button5">最新闻</string>
    <string name="button6">毕业设计</string>
    <string name="toast_button2">启动应用：热门电影</string>
    <string name="toast_button3">启动应用：股票雄鹰</string>
    <string name="toast_button4">启动应用：XYZ阅读器</string>
    <string name="toast_button5">启动应用：最新闻</string>
    <string name="toast_button6">启动应用：毕业设计</string>
    <string name="action_setting">设置</string>
    <string name="action_refresh">刷新</string>
    <string name="movie_detail">电影详情</string>
    <string name="pref_order_label">排序方式</string>
    <string name="pref_order_key">order</string>
    <string name="pref_order_popular">popular</string>
    <string name="pref_order_top_rated">top_rated</string>
    <string name="pref_order_popular_label">受欢迎度</string>
    <string name="pref_order_top_rated_label">按评分</string>
</resources>
