<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.charlotte.mynamiapplication.MainActivity">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:text="@string/text_view1"
        android:textColor="#C0C0C0"
        android:textSize="30sp"
        android:background="@color/title_color"
        android:layout_below="@layout/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/button2"
        android:textColor="#F5F5F5"
        android:textSize="30sp"
        android:background="@color/subtitle_color"
        android:layout_below="@id/text_view1"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/text_view1"
        android:layout_alignRight="@id/text_view1"
        android:gravity="center"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/button3"
        android:textColor="#F5F5F5"
        android:textSize="30sp"
        android:background="@color/subtitle_color"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/button2"
        android:layout_alignRight="@id/button2"
        android:gravity="center"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/button4"
        android:textColor="#F5F5F5"
        android:textSize="30sp"
        android:background="@color/subtitle_color"
        android:layout_below="@id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/button3"
        android:layout_alignRight="@id/button3"
        android:gravity="center"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/button5"
        android:textColor="#F5F5F5"
        android:textSize="30sp"
        android:background="@color/subtitle_color"
        android:layout_below="@id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/button4"
        android:layout_alignRight="@id/button4"
        android:gravity="center"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/button6"
        android:textColor="#F5F5F5"
        android:textSize="30sp"
        android:background="@color/subtitle_color"
        android:layout_below="@id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/button5"
        android:layout_alignRight="@id/button5"
        android:gravity="center"/>

</RelativeLayout>
